--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
         <script src="scripts/phaser.min.js"></script>
         <script src="scripts/tile.js"></script>
         <script src="scripts/enemy.js"></script>
+        <script src="scripts/sidebar.js"></script>
+        <script src="scripts/turret.js"></script>
         <script src="scripts/player.js"></script>
         <script src="scripts/main.js"></script>
     </head>
